--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "redis": "^2.4.2"
   },
   "devDependencies": {
-    "chai": "^3.5.0",
-    "mocha": "^2.4.5"
+    "fakeredis": "^1.0.2",
+    "mocha": "^2.4.5",
+    "sinon": "^1.17.3"
   }
 }
