--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bluebird": "^3.1.5",
     "crc-32": "^0.4.0",
+    "hiredis": "^0.4.1",
     "npm": "^3.6.0",
     "redis": "^2.4.2"
   },
