--- a/examples/package.json
+++ b/examples/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Litvinov Alexander <sanderlimail@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "dependencies": {
     "redis": "^2.8.0"
   }
